src/test/deca/context/invalid/provided/unaryminus_boolean.deca
//Resultats :
//Erreur contextuelle
//Ligne 4: Unary minus can only be applied to integers and floats
{boolean f = -true;}
